<resources>
    <string name="app_name">Refresh</string>
    <string name="button_text">roll</string>
    <string name="second_dice">second dice</string>
    <string name="first_dice">first dice</string>
    <string name="button_next">next</string>
    <string name="button_back">back</string>
    <string name="system">android</string>
    <string name="green_image_description">demonstration for an image resource</string>
    <string name="scroll_text">
        In computing, source code is any collection of code, possibly with comments,
        written using a human-readable programming language, usually as plain text.
        The source code of a program is specially designed to facilitate the work of computer programmers,
        who specify the actions to be performed by a computer mostly by writing source code.
        The source code is often transformed by an assembler
        or compiler into binary machine code that can be executed by the computer.
        The machine code might then be stored for execution at a later time.
        Alternatively, source code may be interpreted and thus immediately executed.
        \n\nMost application software is distributed in a form that includes only executable files.
        If the source code were included it would be useful to a user, programmer or a system administrator,
        any of whom might wish to study or modify the program.
        \n\n
    </string>
    <string name="what_is_your_programming_language">what is your programming language</string>
    <string name="button_apply">APPLY</string>
    <string name="page0_button_next">next</string>
    <string name="box_one">box one</string>
    <string name="box_two">box two</string>
    <string name="chain_box_tree">box three</string>
    <string name="chain_box_four">box four</string>
    <string name="chain_box_five">box five</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_page3_title_fragment">
        Navigation framework
        Safe Args
    </string>
</resources>
